fix/refactor: improve backend services and fix duplicate history bug
- Fix: Remove duplicate history saving (frontend was overriding backend)
- Refactor: Split QueryBuilder.buildGitHubQueries into smaller methods
- Refactor: Improve parsers, clients and ranking logic
- Update: Adjust tests to match refactored code